Finalize admin system segments logic
