# Tekst-API/tekst/routers/platform.py
@@ -2,7 +2,7 @@ from typing import Annotated
 
 from beanie import PydanticObjectId
 from beanie.operators import Or
-from fastapi import APIRouter, Depends, HTTPException, Path, status
+from fastapi import APIRouter, Depends, HTTPException, Path, Query, status
 from humps import decamelize
 
 from tekst.auth import OptionalUserDep, SuperuserDep
@@ -117,20 +117,33 @@ async def update_platform_settings(
 
 
 @router.get(
-    "/segments/{key}",
+    "/segments",
     response_model=ClientSegmentRead,
     status_code=status.HTTP_200_OK,
 )
 async def get_segment(
-    segment_key: Annotated[str, Path(alias="key")]
+    key: Annotated[str, Query(description="Key of the segment to retrieve")],
+    locale: Annotated[
+        str, Query(description="Locale of the segment to retrieve")
+    ] = None,
 ) -> ClientSegmentDocument:
-    segment = await ClientSegmentDocument.find_one(
-        ClientSegmentDocument.key == segment_key
+    segment = (
+        await ClientSegmentDocument.find_one(
+            ClientSegmentDocument.key == key,
+            ClientSegmentDocument.locale == locale,
+        )
+        or await ClientSegmentDocument.find_one(
+            ClientSegmentDocument.key == key,
+            ClientSegmentDocument.locale == "enUS",
+        )
+        or await ClientSegmentDocument.find_one(
+            ClientSegmentDocument.key == key,
+        )
     )
     if not segment:
         raise HTTPException(
             status_code=status.HTTP_404_NOT_FOUND,
-            detail=f"Client segment {segment_key} doesn't exist",
+            detail=f"Client segment {key} doesn't exist",
         )
     return segment
 
@@ -161,7 +174,7 @@ async def create_segment(
     ).exists():
         raise HTTPException(
             status_code=status.HTTP_409_CONFLICT,
-            detail="An equal segment already exists (same key)",
+            detail="An equal segment already exists (same key and locale)",
         )
     return await ClientSegmentDocument.model_from(segment).create()
 
